--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,8 @@
     <string name="app_name">LearnMoreGame</string>
     <string name="item1">Item1</string>
     <string name="item2">Item2</string>
+    <string name="gameName">Assasin\'s Creed</string>
+    <string name="gameType">Nhập vai, hành động</string>
+    <string name="date">23 Oct 1996</string>
+    <string name="views">9999</string>
 </resources>
